slider-sectio-complete

--- a/index.html
+++ b/index.html
@@ -25,9 +25,19 @@
                 <li>Assistenza</li>              
               </ul>
               <ul class="button float-right">
-                <li><input id="accedi" type="button" value="Accedi"></li>
+                <li><input class="button-radius" type="button" value="Accedi"></li>
               </ul>
           </nav>
+          <div class="main-content">
+            <h1>il tuo posto per parlare</h1>
+            <p>Che tu faccia parte di un club scolastico, gruppo dig amer, comunita` artistica mondiale, o sompicemente di un piccolo grupop dia mici che vuole passare il tempo assime, Discord rende piu` facile chiacchierare ogni giorno e ritrovarsi piu` spesso.</p>
+            <div class="main-button">
+                <input class="button-radius" type="button" value="&darr; Scarica per Mac">
+                <input class="button-radius" type="button" value="Apri Discord nel tuo browser">
+            </div>
+           
+          </div>
+           
       </div>
   </header>  
   <main></main>
