first-section-complete

--- a/index.html
+++ b/index.html
@@ -35,12 +35,23 @@
                 <input class="button-radius" type="button" value="&darr; Scarica per Mac">
                 <input class="button-radius" type="button" value="Apri Discord nel tuo browser">
             </div>
-           
           </div>
-           
       </div>
   </header>  
-  <main></main>
+  <main>
+      <section class="box clearfix">
+        <div class="item float-left">
+            <img src="img/item1.svg" alt="immagine del tipo ranocchio che legge un libro">
+        </div>
+        <div class="text float-right">
+            <h3>Un luogo a invito con tutto lo spazio necessario per parlre</h3>
+            <p>I serer Discord sono roganizzati in canalit ematici in cui puoi collaborare, condividere o semplicemente parlare della tua gioranta senza intasare una chat di gruppo.</p>
+        </div>
+      </section>
+      <section></section>
+      <section></section>
+      <section></section>
+  </main>
   <footer></footer>
 
 </body>
