--- a/index.html
+++ b/index.html
@@ -48,9 +48,37 @@
             <p>I serer Discord sono roganizzati in canalit ematici in cui puoi collaborare, condividere o semplicemente parlare della tua gioranta senza intasare una chat di gruppo.</p>
         </div>
       </section>
-      <section></section>
-      <section></section>
-      <section></section>
+      <section class="box clearfix">
+        <div class="text float-left">
+            <h3>Dove trovarsi e` facile</h3>
+            <p>Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere se sei li e unirsi istantanemaente senza dover chiamare.</p>
+        </div>
+        <div class="item float-right">
+            <img src="img/item2.svg" alt="immagine di un coso rosa e un mago">
+        </div>
+      </section>
+      <section class="box clearfix">
+        <div class="item float-left">
+            <img src="img/item3.svg" alt="immagine di uno screen dove il tipo nella foto e` blu">
+        </div>
+        <div class="text float-right">
+            <h3>Da pochi a un fandom</h3>
+            <p>Dai inizio a una community di qualosiasi dimensione con strumenti di moderazione e accesso ai membri personalizzabile, concedi ai membri poteri sepciali, crea canali privati, e molto altro.</p>
+        </div>
+      </section>
+      <section class="box text">
+        <div class="center">
+            <h3>Tecnologia affiadbile per etnersi in contatto</h3>
+            <p>Video e audio a abssa latenza ti faranno sentire come se foste tutti nela stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o rinitevi in una sessione di disegno conla condivisione schermo</p>
+            <img src="img/item4-big.svg" alt="immagine gicante con telefoni e cose">
+            <div class="bg-stars">
+                Pronto a iniziare la tua avventura?
+            </div>
+            <div class="button-radius">
+                <input class="button-radius" type="button" value="&darr; Scarica per Mac">
+            </div>
+        </div>
+      </section>
   </main>
   <footer></footer>
 
