--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;700&display=swap" rel="stylesheet"> 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Discord</title>
 </head>
 <body>
@@ -18,11 +19,11 @@
                   <li><img src="img/logo.svg" alt="Logog Discord"></li>
               </ul>
               <ul class="menu float-left">
-                <li>Scarica</li>              
-                <li>Perche` discord</li>              
-                <li>Nitro</li>              
-                <li>Sicurezza</li>              
-                <li>Assistenza</li>              
+                <li><a href="#">Scarica</a></li>              
+                <li><a href="#">Perche` discord</a></li>              
+                <li><a href="#">Nitro</a></li>              
+                <li><a href="#">Sicurezza</a></li>              
+                <li><a href="#">Assistenza</a></li>              
               </ul>
               <ul class="button float-right">
                 <li><input class="button-radius" type="button" value="Accedi"></li>
@@ -80,7 +81,66 @@
         </div>
       </section>
   </main>
-  <footer></footer>
-
+  <footer>
+      <div class="footer-container clearfix">
+        
+        <ul class="float-left">
+            <li><h4>Il tuo posto per parlare</h4></li>
+            <li><a href="#"><img id="ita" src="img/ita.png" alt="bandiera italiana"> Italiano&or;</a></li>
+            <li>
+                <a href="#"><img class="icon" src="https://img.icons8.com/ios/50/000000/twitter--v1.png"/></a>
+                <a href="#"><img class="icon" src="https://img.icons8.com/ios/50/000000/instagram-new--v1.png"/></a>
+                <a href="#"><img class="icon" src="https://img.icons8.com/ios/50/000000/facebook--v1.png"/></a>
+                <a href="#"><img class="icon" src="https://img.icons8.com/ios/50/000000/youtube--v1.png"/></a>
+            </li>
+        </ul>
+        <ul class="float-left">
+            <li>Prodotto</li>
+            <li><a href="#">Scarica</a></li>
+            <li><a href="#">Perche` discord</li>
+            <li><a href="#">sicurezza</li>
+            <li><a href="#">Assistenza</li>
+            <li><a href="#">nitro</li>
+        </ul>
+        <ul class="float-left">
+            <li>Compagnia</li>
+            <li><a href="#">Chi siamo</a></li>
+            <li><a href="#">Lavora con noi` discord</li>
+            <li><a href="#">marchio</li>
+            <li><a href="#">Redazione</li>
+            <li><a href="#">Negozio</li>
+        </ul>
+        <ul class="float-left">
+            <li>Risorse</li>
+            <li><a href="#">Scarica</a></li>
+            <li><a href="#">Perche` discord</li>
+            <li><a href="#">sicurezza</li>
+            <li><a href="#">Assistenza</li>
+            <li><a href="#">nitro</li>
+            <li><a href="#">Scarica</a></li>
+            <li><a href="#">Perche` discord</li>
+            <li><a href="#">sicurezza</li>
+            <li><a href="#">Assistenza</li>
+            <li><a href="#">nitro</li>
+        </ul>
+        <ul class="float-left">
+            <li>Compagnia</li>
+            <li><a href="#">Chi siamo</a></li>
+            <li><a href="#">Lavora con noi` discord</li>
+            <li><a href="#">marchio</li>
+            <li><a href="#">Redazione</li>
+            <li><a href="#">Negozio</li>
+        </ul>
+    </div>
+    <div class="foot clearfix">
+        <div class="logo float-left">
+            <img src="img/logo.svg" alt="Logog Discord">
+        </div>
+            <div class="button float-right">
+                <input class="button-radius" type="button" value="Registrati">
+            </div>
+        </div>
+    </div>
+  </footer>
 </body>
 </html>
